changed to not use error_score

--- a/change.ipynb
+++ b/change.ipynb
@@ -248,9 +248,9 @@
     }
    ],
    "source": [
-    "error_score = np.array(error_score).reshape(1, 12)[0]\n",
+    "error_scorefixed = np.array(error_score).reshape(1, 12)[0]\n",
     "print(error_score)\n",
-    "plt.bar(x = range(12), height=error_score)"
+    "plt.bar(x = range(12), height=error_scorefixed)"
    ]
   },
   {
